moved all error messages to the top of the form, change advertisements to be displayed at different pages, add new author at blog page, CRUD authors, CRUD blog categories, added retype password in profile, empty field validation in multiple pages

--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ td {
 
 #framecontent a {
     color: #000;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 #framecontent a:hover {
@@ -209,4 +209,9 @@ width: 100%;
 .setting-tooltips {
     font-size: 13px;
     font-style: oblique;
+}
+
+.checkboxAlign {
+    margin-left: 70px;
+    margin-top: -20px;
 }
