--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 @font-face{
-    font-family: 'Alright Sans';
+    font-family: 'Alright Sans-Light';
     src: url(font/AlrightSans-Light-v3.otf);
+}
+
+@font-face{
+    font-family: 'Alright Sans-Medium';
+    src: url(font/AlrightSans-Medium-v3.otf);
 }
 
 html,body { 
@@ -19,7 +24,8 @@ body {
     line-height: 21px; 
     font-size: 12px; 
     color: #000; 
-    font-family: 'Alright Sans'; 
+    font-family: 'Alright Sans-Light';
+    letter-spacing: 1px;
 }
 
 .container{
@@ -73,7 +79,6 @@ input[type=button], input[type=submit], input[type=reset] {
 .logo {
     margin: auto;
     text-align: center;
-    max-width: 300px;
     padding: 50px;
     background-image: url(images/HorizontalLogo_black.png);
     background-repeat: no-repeat;
@@ -82,14 +87,12 @@ input[type=button], input[type=submit], input[type=reset] {
 }
 
 .logo_sidebar {
-    margin: auto;
-    text-align: center;
-    max-width: 200px;
-    padding: 10px;
+    padding: 20px;
+    left: 10px;
     background-image: url(images/HorizontalLogo_black.png);
     background-repeat: no-repeat;
-    background-size: auto 20px;
-    background-position: center center;
+    background-size: 200px auto;
+    background-position: 1% center;
 }
 
 form {
@@ -121,12 +124,22 @@ td {
     text-align: center;
 }
 
+#frameheader{
+    top: 0;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    background: #f2f2f2;
+    display: block;
+    position: fixed;
+}
+
 #framecontent{
     position: fixed;
-    top: 0;
+    top: 60px;
     bottom: 0; 
     left: 0;
-    width: 200px; /*Width of frame div*/
+    width: 250px; /*Width of frame div*/
     height: 100%;
     overflow: auto; /*Disable scrollbars. Set to "scroll" to enable*/
     background: #ccc;
@@ -163,39 +176,33 @@ td {
     text-decoration: none;
 }
 
-#framecontent a:hover {
-    color: #808080;
-}
-
-#framecontent a:active {
-    color: #fff;
-}
-
-#framecontent a:visited {
+#framecontent a:link, #framecontent a:visited {
     color: #000;
 }
 
+#framecontent a:hover, #framecontent a:active {
+    color: #fff;
+}
+
 #maincontent{
-position: fixed;
-top: 0; 
-left: 200px; /*Set left value to WidthOfFrameDiv*/
-right: 0;
-bottom: 0;
-overflow: auto; 
-background: #fff;
+    position: fixed;
+    top: 60px; 
+    left: 250px; /*Set left value to WidthOfFrameDiv*/
+    right: 0;
+    bottom: 0;
+    overflow: auto; 
+    background: #fff;
 }
 
 .innertube{
-margin: 15px; /*Margins for inner DIV inside each DIV (to provide padding)*/
+    margin: 15px; /*Margins for inner DIV inside each DIV (to provide padding)*/
 }
 
-* html body{ /*IE6 hack*/
-padding: 0 0 0 200px; /*Set value to (0 0 0 WidthOfFrameDiv)*/
-}
-
-* html #maincontent{ /*IE6 hack*/
-height: 100%; 
-width: 100%; 
+.rightheader {
+    position: absolute;
+    top: 0px;
+    right: 15px;
+    padding: 20px;
 }
 
 #settings, #web {
@@ -203,7 +210,7 @@ width: 100%;
 }
 
 #webDropdown li {
-    font-size: 14px;  
+    font-size: inherit;  
 }
 
 .setting-tooltips {
