--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,14 @@ html,body {
     border: 0; 
     background-color: #fff; 
 }
+
 html { 
     font-size: 62.5%; 
     -webkit-touch-callout:none; 
     -webkit-text-size-adjust:none; 
     -ms-text-size-adjust:100%; 
 }
+
 body { 
     line-height: 21px; 
     font-size: 12px; 
@@ -41,6 +43,7 @@ body {
 
 .error {
    color: red; 
+   padding: 5px;
 }
 
 .form_header {
@@ -87,12 +90,111 @@ input[type=button], input[type=submit], input[type=reset] {
 }
 
 .logo_sidebar {
+    width: 200px;
     padding: 20px;
     left: 10px;
     background-image: url(images/HorizontalLogo_black.png);
     background-repeat: no-repeat;
     background-size: 200px auto;
     background-position: 1% center;
+}
+
+
+#terms_nav {
+  text-align: center;
+}
+#terms_nav ul {
+  display: inline-block;
+  margin: 20px 0;
+  padding: 0;
+}
+#terms_nav li {
+  padding: 0 60px;
+  display: inline-block;
+  text-transform: uppercase;
+}
+#terms_nav li a {
+  display: inline-block;
+  color: #000;
+  padding: 5px;
+  text-decoration: none;
+}
+
+#terms_content {
+    text-align: left;
+    padding: 30px 250px;
+}
+
+#terms_content .title {
+    text-transform: uppercase;
+}
+
+.rightheader, .rightcontact {
+    padding: 0!important;
+}
+
+.left_nav, .rightheader, .rightcontact, .righticons {
+    display: flex;
+}
+
+
+.rightcontact {
+    position: absolute;
+    top: 85px;
+    right: 20px;
+    padding: 0;
+}
+
+.righticons {
+    position: absolute;
+    top: 200px;
+    right: 15px;
+    padding: 0;
+}
+
+.contact {
+    margin-left: 10px;
+}
+
+.left_nav ul, .rightheader ul, .righticons ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: inline-block;
+}
+
+.left_nav li, #footer li {
+    float: left;
+    margin-top: 5px;
+    padding: 10px;
+}
+
+.rightheader li, .righticons {
+    float: left;
+    margin-top: 5px;
+}
+
+.left_nav li a , .rightheader li a, .righticons li a {
+    display: block;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+}
+
+.left_nav a:hover:not(.active), #terms_nav a:hover:not(.active) {
+    color: #808080;
+}
+
+.active {
+background-color:#4CAF50;
+}
+
+#footer {
+    clear: both;
+    position: relative;
+    z-index: 10;
+    height: 3em;
 }
 
 form {
@@ -221,4 +323,9 @@ td {
 .checkboxAlign {
     margin-left: 70px;
     margin-top: -20px;
+}
+
+.title {
+    font-size: 14px;
+    align-content: left;
 }
