center align products page (no horizontal scrollbar)

--- a/styles.css
+++ b/styles.css
@@ -343,14 +343,14 @@ td {
     margin-top: 5px;
 }
 
-.left_nav li a , .rightheader li a, .righticons li a, .products row a {
+.left_nav li a , .rightheader li a, .righticons li a, #products_table a {
     display: block;
     color: black;
     text-align: center;
     text-decoration: none;
 }
 
-.left_nav a:hover:not(.active), #terms_nav a:hover:not(.active), .products row a:hover:not(.active) {
+.left_nav a:hover:not(.active), #terms_nav a:hover:not(.active), #products_table a:hover:not(.active) {
     color: #808080;
 }
 
@@ -570,7 +570,7 @@ div.panel.show {
     display: flex;
 }
 
-.products row {
+#products_table {
     text-align: center!important;
     margin: 0 auto!important;
     width: 100%!important;
@@ -580,7 +580,7 @@ div.panel.show {
     width: 30%!important;
 }
 
-.products row img {
+#products_table img {
     width: 100%;
 }
 
